--- a/whats_app_ui/src/App.css
+++ b/whats_app_ui/src/App.css
@@ -1,5 +1,10 @@
 .App {
+  display: flex;
+  flex-direction: row;
   text-align: center;
+  background-color: #f8f7f2;
+  width: 100%;
+  height: 100vh;
 }
 
 .App-logo {
@@ -27,6 +32,34 @@
 .App-link {
   color: #61dafb;
 }
+
+.dummyChat {
+  display: flex;
+  height: 100vh;
+  width: 100%;
+  justify-content: center;
+}
+
+.dummyIcon {
+  position: absolute;
+  scale: 25;
+  color: #a8a8a8;
+  opacity: 0.15;
+  z-index: 0;
+}
+
+.dummyInfo {
+  align-self: center;
+}
+
+.dummyText {
+  color: #000000;
+  font-size: 2.3rem !important;
+  font-weight: 700 !important;
+  z-index: 1 !important;
+
+}
+
 
 @keyframes App-logo-spin {
   from {
