--- a/whats_app_ui/src/components/chat-component/message-component/MessageItem.css
+++ b/whats_app_ui/src/components/chat-component/message-component/MessageItem.css
@@ -20,7 +20,9 @@
 }
 
 .messageSender {
+    font-weight: bold !important;
     font-size: 12px;
+    margin-right: 20% !important;
     color: #888;
 }
 
