--- a/whats_app_ui/src/components/sidebar-component/Sidebar.css
+++ b/whats_app_ui/src/components/sidebar-component/Sidebar.css
@@ -1,25 +1,8 @@
 .sideBarBg {
     background-color: #f8fffb !important;
     width: 25%;
-    overflow: auto;
-}
-
-.sideBarBg::-webkit-scrollbar {
-    width: 4px;
-    border-radius: 10px;
-
-}
-
-.sideBarBg::-webkit-scrollbar-thumb {
-    background-color: #b4b4b4;
-    border-radius: 10px;
-
-}
-
-.sideBarBg::-webkit-scrollbar-track {
-    background-color: #f1f1f1;
-    border-radius: 10px;
-
+    overflow-y: auto; /* Enable horizontal scrolling */
+    overflow-x: hidden; /* Disable vertical scrolling */
 }
 
 .profilePanel {
@@ -27,20 +10,11 @@
     flex-direction: row;
     align-items: center;
     width: 100%;
-    height: 8%;
+    height: 7.8%;
     overflow: hidden;
+    border: 2px solid #e4ece6;
 }
-/*
-.profilePanel ::before{
-    position: absolute;
-    content: '';
-    top: 8%;
-    left: 1.3%;
-    width: 10%;
-    height: 3px;
-    background-color: #075E54;
-}
-*/
+
 .avatar {
     height: 44px !important;
     width: 44px !important;
@@ -50,17 +24,83 @@
     border: 1px solid #06260f;
 }
 
+.logoutIcoWrap {
+    overflow: hidden !important;
+    transition: 0.1s;
+}
+
+.logoutIcoWrap:hover {
+    cursor: pointer;
+    scale: 1.1;
+    rotate: -2deg;
+    transition: 0.25s ease-in;
+}
+
+.logoutIcoWrap:active {
+    rotate: -10deg;
+    scale: 1.25;
+    color: #16f351;
+    transition: 0.025s;
+}
+
 .title {
+    width: 55%;
+    text-align: left;
     font-size: 1.7rem;
     opacity: 0.85;
     margin-left: 30px;
+
+}
+
+.searchPanel {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    height: 5%;
+    margin-top: 20px;
+    padding: 10px 0 10px 0;
+    overflow: hidden;
+    border: 2px solid #e4ece6;
+
+}
+
+.phoneField {
+    width: 85%;
+    margin-left: 5% !important;
+    margin-right: 5% !important;
+    border-bottom: 2px solid #0a8564 !important;
+}
+
+.phoneIcon {
+        margin-right: 20px;
 }
 
 .chatList {
     display: flex;
+    overflow-y: scroll;
+    overflow-x: hidden;
     justify-content: left;
-    height: 100%;
+    height: 81.65%;
     width: 100%;
+}
+
+.chatList::-webkit-scrollbar {
+    width: 4px;
+    border-radius: 10px;
+
+}
+
+.chatList::-webkit-scrollbar-thumb {
+    background-color: #b4b4b4;
+    border-radius: 10px;
+
+}
+
+.chatList::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+    border-radius: 10px;
+
 }
 
 .Stack {
